--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 header {
-    background-color: deeppink;
+    background-color: whitesmoke;
     color:black;
 }
 
 body {
-    background-color: deeppink;
+    background-color: whitesmoke;
     color: white;
 }
 
 footer {
-    background-color: deeppink;
+    background-color: whitesmoke;
     color:black;
 }
 
