--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 header {
     background-color: whitesmoke;
-    color:black;
+    color: deeppink;
 }
 
 body {
     background-color: whitesmoke;
-    color: white;
+    color: black;
 }
 
 footer {
     background-color: whitesmoke;
-    color:black;
+    color: deeppink;
 }
 
 .imagem-2{
