--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header {
     background-color: whitesmoke;
-    color: deeppink;
+    color: rgb(201, 5, 109);
 }
 
 body {
@@ -10,7 +10,7 @@ body {
 
 footer {
     background-color: whitesmoke;
-    color: deeppink;
+    color: rgb(201, 5, 109);
 }
 
 .imagem-2{
